<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hucompute.textimager.uima</groupId>
    <artifactId>duui-slc-spacy-tests</artifactId>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <ttlab.duui.version>1.3</ttlab.duui.version>
        <ttlab.typesystem.version>3.0.3</ttlab.typesystem.version>
    </properties>

    <build>
        <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.0</version>
            <configuration>
                <argLine>
                    --illegal-access=permit
                    --add-opens java.base/java.util=ALL-UNNAMED
                    <!--                        add-opens for use in JUnit-Tests...-->
                </argLine>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>2.22.0</version>
            <configuration>
                <argLine>
                    --illegal-access=permit
                </argLine>
            </configuration>
        </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>${ttlab.duui.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.texttechnologylab</groupId>-->
<!--            <artifactId>DockerUnifiedUIMAInterface</artifactId>-->
<!--            <version>1.4</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>com.github.texttechnologylab.textimager-uima</groupId>-->
<!--            <artifactId>textimager-uima-types</artifactId>-->
<!--            <version>${ttlab.textimager.typesystem.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>${ttlab.typesystem.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-document-annotation</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <version>2.2.0</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-text-asl</artifactId>
            <version>2.4.0</version>
        </dependency>

    </dependencies>
</project>